--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
-    "@dhis2/cli-app-scripts": "^7.2.1"
+    "@dhis2/cli-app-scripts": "^7.2.1",
+    "cz-conventional-changelog": "3.3.0"
   },
   "dependencies": {
     "@dhis2/app-runtime": "^2.8.0",
     "react-router-dom": "^5.2.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
