--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@dhis2/app-runtime": "^2.8.0",
-    "react-router-dom": "^5.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-router-dom": "^5.2.0",
+    "recoil": "^0.4.0"
   },
   "config": {
     "commitizen": {
