--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "devDependencies": {
     "@dhis2/cli-app-scripts": "^7.2.1",
+    "@material-ui/icons": "^4.11.2",
     "cz-conventional-changelog": "3.3.0"
   },
   "dependencies": {
     "@dhis2/app-runtime": "^2.8.0",
+    "@material-ui/core": "^4.12.3",
     "eslint-plugin-react-hooks": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.4.0"
