--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@dhis2/app-runtime": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "lodash": "^4.17.21",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.4.0"
   },
