--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@dhis2/app-runtime": "^2.8.0",
     "@material-ui/core": "^4.12.3",
+    "buffer": "^6.0.3",
     "eslint-plugin-react-hooks": "^4.2.0",
     "lodash": "^4.17.21",
     "react-router-dom": "^5.2.0",
