--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "lodash": "^4.17.21",
     "react-router-dom": "^5.2.0",
+    "react-to-print": "^2.13.0",
     "recoil": "^0.4.0"
   },
   "config": {
