--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indicator-dictionary",
+  "name": "Metadata-Dictionary",
   "version": "1.0.0",
   "description": "",
   "license": "BSD-3-Clause",
